--- a/ta_basic_concepts.ipynb
+++ b/ta_basic_concepts.ipynb
@@ -322,7 +322,7 @@
     "* **Poisson**. Number of events if we expect $\\nu$, *i.e.* the number of interactions in a crossing of the LHC beams is modeled with a poisson. Nuclear decays are poisson distributed too.\n",
     "\n",
     "$$ \n",
-    "g(n|\\nu) = \\frac{\\nu^n}{n!} e^{-\\nu}\n",
+    "g(n|\\nu) = \\frac{\\nu^n}{n!} e^{-\\n}\n",
     "$$ \n",
     "\n",
     "* **Uniform**. Equal probability to get $x$ in an interval $[a, b]$.\n",
